--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="description"
-      content="Web site created using create-react-app"
+      name="ZomBnB"
+      content="Rest easy, even when the world's gone creepy."
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -27,7 +26,8 @@
     <title>ZomBnB</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Gloria+Hallelujah&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Gloria+Hallelujah&family=Open+Sans&display=swap" rel="stylesheet">
+    <script src="https://accounts.google.com/gsi/client" async></script>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
