--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
     <meta
-      name="ZomBnB"
+      name="zomBnB"
       content="Rest easy, even when the world's gone creepy."
     />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
@@ -19,7 +19,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>ZomBnB</title>
+    <title>zomBnB</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display&family=Gloria+Hallelujah&family=Open+Sans&display=swap" rel="stylesheet">
